tests/error/comptime_arg_errors/callable.err
Error: Invalid annotation (at $FILE:6:16)
  | 
4 | 
5 | @guppy
6 | def main(f: Fn[[nat @comptime], None]) -> None:
  |                 ^^^^^^^^^^^^^ Comptime annotations are only allowed for named top-level
  |                               function arguments

Guppy compilation failed due to 1 previous error
